--- a/package.json
+++ b/package.json
@@ -17,9 +17,15 @@
   },
   "homepage": "https://github.com/haoliangyu/gpipe#readme",
   "dependencies": {
+    "bluebird": "^3.0.2",
+    "csv": "^0.4.6",
     "jszip": "^2.5.0",
-    "promise": "^7.0.4",
+    "lodash": "^3.10.1",
     "shp-write": "^0.2.4",
     "tokml": "^0.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.3.0",
+    "mocha": "^2.3.3"
   }
 }
