add support for user-specified promise library

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   },
   "homepage": "https://github.com/haoliangyu/gpipe#readme",
   "dependencies": {
-    "bluebird": "^3.0.2",
     "csv-parse": "^1.0.0",
     "elementtree": "^0.1.6",
     "jszip": "^2.5.0",
@@ -29,8 +28,11 @@
     "topojson": "^1.6.19"
   },
   "devDependencies": {
+    "bluebird": "^3.0.5",
     "chai": "^3.3.0",
     "log4js": "^0.6.27",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "promise": "^7.0.4",
+    "q": "^1.4.1"
   }
 }
